fix spacing and sizing to better align header elements

--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,8 @@ html, body {
     display: flex;
     position: absolute;
     font-size: 13px;
-    left: 35px;
-    top: 40%;
+    left: 80%;
+    top: 35%;
     /* transform: translateY(-50%); */
     /* bottom: 3px; */
     text-transform: uppercase;
@@ -88,7 +88,7 @@ html, body {
     position: absolute;
     display: flex;
     right: 60px;
-    top: 50%;
+    top: calc(50% + 2px);
     transform: translateY(-50%);
     cursor: pointer;
     stroke-width: 1.2;
@@ -224,13 +224,22 @@ footer {
     position: absolute;
     display: flex;
     right: 18px;
-    top: 50%;
+    top: calc(50% + 5px);
     width: 20px;
     transform: translateY(-50%);
     cursor: pointer;
     stroke-width: 1.2;
     -webkit-tap-highlight-color: transparent;
     user-select: none;
+}
+
+.button-max-width-911::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    border-top: 1px dashed red;
 }
 
 .cart-items {
